--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <script src="assets/scripts/phaser.js"></script>
+    <script src="assets/scripts/GameScene.js"></script>
     <script src="assets/scripts/main.js"></script>
 </body>
 </html>
