Add custom font to game

--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
         canvas {
             width: 100%;
         }
+        @font-face {
+            font-family: 'Huxtable';
+            src: url('assets/fonts/huxtable.ttf');
+        }
+        .fontPreload {
+            font-family: 'Huxtable';
+            position: absolute;
+            left: -100px;
+        }
     </style>
 
 </head>
 <body>
+    <div class="fontPreload">.</div>
     <script src="assets/scripts/phaser.js"></script>
     <script src="assets/scripts/Dots.js"></script>
     <script src="assets/scripts/GameScene.js"></script>
